--- a/app/scss/assets/base-assets/collection.scss
+++ b/app/scss/assets/base-assets/collection.scss
@@ -4,11 +4,23 @@
   position: absolute;
   // add left: 60% if collection more than 2 items and nav is hidden
   left: 95%;
-  top: 18em;
+  top: 50%;
   padding: 20px;
   overflow: hidden;
   white-space: nowrap;
-  transform: translate(-50%, 0);
+  transform: translate(-50%, -50%);
+  @media screen and (min-width: 2100px) {
+    height: 34em;
+  }
+  @media screen and (min-width: 2800px) {
+    height: 41em;
+  }
+  @media screen and (min-width: 3840px) {
+    height: 60em;
+  }
+  @media screen and (max-width: 1755px) {
+    height: 24em;
+  }
   @media screen and (max-width: 1366px) {
     left: 100%;
     height: 24em;
@@ -45,6 +57,22 @@
   // for move collection item use transform with a negative value for example : transform: translateX(-640px);
   transform: translateX(0);
   // add class hidden to .collection if navigation not on Collections-nav-list-item
+  @media screen and (min-width: 2100px) {
+    width: 45em;
+    height: 30em;
+  }
+  @media screen and (min-width: 2800px) {
+    width: 60em;
+    height: 37em;
+  }
+  @media screen and (min-width: 3840px) {
+    width: 80em;
+    height: 55em;
+  }
+  @media screen and (max-width: 1755px) {
+    width: 30em;
+    height: 20em;
+  }
   @media screen and (max-width: 1366px) {
     width: 30em;
     height: 20em;
@@ -109,6 +137,22 @@
     text-align: center;
     overflow: hidden;
     display: block;
+    @media screen and (min-width: 2100px) {
+      width: 45em;
+      height: 30em;
+    }
+    @media screen and (min-width: 2800px) {
+      width: 60em;
+      height: 37em;
+    }
+    @media screen and (min-width: 3840px) {
+      width: 80em;
+      height: 55em;
+    }
+    @media screen and (max-width: 1755px) {
+      width: 30em;
+      height: 20em;
+    }
     @media screen and (max-width: 1366px) {
       width: 30em;
       height: 20em;
@@ -158,10 +202,17 @@
     width: 60px;
     height: 40px;
     background: color('gray');
+    @media screen and (min-width: 3840px) {
+      width: 120px;
+      height: 90px;
+    }
     &-holder {
       position: absolute;
-      top: 0.6em;
-      left: 0.6em;
+      // top: 0.6em;
+      // left: 0.6em;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
     &__icon {
       background: url('../img/two-squares.png');
@@ -169,18 +220,30 @@
       height: 16px;
       display: inline-block;
       // background-size: cover;
+      @media screen and (min-width: 3840px) {
+        background: url('../img/two-squares-big.png');
+        width: 32px;
+        height: 32px;
+      }
     }
     &__count {
       font-family: 'Roboto-Regular';
       color: color('primary');
       font-size: 1.1em;
+      @media screen and (min-width: 3840px) {
+        font-size: 2.5em;
+      }
     }
   }
   &-text {
+    font-size: 16px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    @media screen and (min-width: 3840px) {
+      font-size: 40px;
+    }
   }
 }
 
