--- a/app/scss/assets/base-assets/nav.scss
+++ b/app/scss/assets/base-assets/nav.scss
@@ -15,7 +15,7 @@
   left: 3.6em;
   top: 0;
   position: absolute;
-  @media screen and (min-width: 3840px) {
+  @media screen and (min-width: 3200px) {
     left: 7em;
     width: 96em;
     background-size: contain;
@@ -31,7 +31,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    @media screen and (min-width: 3840px) {
+    @media screen and (min-width: 3200px) {
       font-size: 40px;
     }
   }
@@ -48,7 +48,7 @@
       display: block;
       width: 100%;
       margin-bottom: 10px;
-      @media screen and (min-width: 3840px) {
+      @media screen and (min-width: 3200px) {
         margin-bottom: 25px;
       }
       span {
@@ -59,7 +59,7 @@
         font-family: 'Roboto-Bold';
         color: color('gray');
         transition: all 0.15s ease-in;
-        @media screen and (min-width: 3840px) {
+        @media screen and (min-width: 3200px) {
           font-size: 40px;
           padding: 20px 30px;
           border-radius: 40px;
@@ -91,7 +91,7 @@
           color: #000;
           font-family: 'Roboto-Bold';
           box-shadow: 2px 4px 16px -3px #000;
-          @media screen and (min-width: 3840px) {
+          @media screen and (min-width: 3200px) {
             font-size: 40px;
             padding: 20px 30px;
             border-radius: 40px;
@@ -111,11 +111,17 @@
   display: inline-block;
   background: url('../img/bg_fx_innerpage.png') no-repeat;
   background-size: cover;
-  @media screen and (min-width: 3840px) {
+  @media screen and (min-width: 3200px) {
     width: 290px;
   }
   @media screen and (max-width: 1366px) {
     width: 105px;
+  }
+  @media screen and (max-width: 1280px) {
+    width: 99px;
+  }
+  @media screen and (max-height: 760px) {
+    width: 99px;
   }
 
   &-arrow {
@@ -134,7 +140,7 @@
       height: 60px;
       border-radius: 30px;
     }
-    @media screen and (min-width: 3840px) {
+    @media screen and (min-width: 3200px) {
       width: 100px;
       height: 100px;
       border-radius: 50px;
@@ -156,7 +162,7 @@
         top: 25px;
         left: 22px;
       }
-      @media screen and (min-width: 3840px) {
+      @media screen and (min-width: 3200px) {
         top: 40px;
         left: 32px;
         width: 32px;
@@ -176,7 +182,7 @@
         top: 32px;
         left: 22px;
       }
-      @media screen and (min-width: 3840px) {
+      @media screen and (min-width: 3200px) {
         top: 61px;
         left: 32px;
         width: 32px;
