--- a/app/scss/assets/base-assets/nav.scss
+++ b/app/scss/assets/base-assets/nav.scss
@@ -17,28 +17,6 @@
   left: 3.4em;
   top: 0;
   position: absolute;
-  
-  // @media screen and (max-height: 2160px) {
-  //   left: 5em;
-  //   width: 87em;
-  // }
-  // @media screen and (max-height: 1600px) {
-  //   left: 0.8em;
-  //   width: 64.2em;
-  // }
-  // @media screen and (max-height: 1366px) {
-  //   left: 1.4em;
-  //   width: 58em;
-  // }
-  // @media  screen and (max-height: 910px) {
-  //   left: 3.1em;
-  //   width: 46em;
-  // }
-
-  // @media  screen and (max-height: 720px) {
-  //   width: 37em;
-  //   left: 4.4em;
-  // }
   @media screen and (max-width: 3840px) {
     width: 90em;
     left: 6em;
@@ -50,6 +28,10 @@
   @media screen and (max-width: 3200px) {
     left: 1.5em;
     width: 58em;
+  }
+  @media screen and (max-width: 2560px), screen and (max-height: 1600px) {
+    left: 0.8em;
+    width: 64.2em;
   }
   @media screen and (max-width: 2200px) {
     left: 2.4em;
@@ -67,12 +49,12 @@
     left: 2.1em;
     width: 37em;
   }
-  // @media screen and (max-width: 1600px) {
-  //   left: 4.4em;
-  //   width: 38em;
-  // }
   @media screen and (max-width: 1366px) {
     left: 2.1em;
+  }
+  @media screen and (max-width: 1320px) {
+    left: 3.3em;
+    width: 31em;
   }
 
   &__holder {
@@ -84,9 +66,6 @@
     @media screen and (min-width: 3200px) {
       font-size: 40px;
     }
-    // @media screen and (max-height: 720px) {
-    //   left: 60%;
-    // }
   }
   &-title {
     color: color('primary');
@@ -171,13 +150,6 @@
   @media screen and (max-width: 1550px) {
     width: 115px;
   }
-  // @media screen and (max-height: 2160px) {
-  //   width: 265px;
-  // }
-  // @media screen and (max-height: 1600px) {
-  //   width: 148px;
-  // }
-
   &-arrow {
     width: 50px;
     height: 50px;
