--- a/app/scss/base.scss
+++ b/app/scss/base.scss
@@ -20,31 +20,20 @@ body {
     background-size: cover;
     overflow: hidden;
     background: url('https://cdn-images-1.medium.com/max/1600/1*aT0YAgCTsQgGAO6K0TK0DA.jpeg');
-    &::after {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 3;
-        background: url('http://alanpride.com/admin/images/BG_Radial_gradient.png') no-repeat;
-        background-size: cover;
-        background-position: center center;
-    }
     &--inner {
         background: url('https://i.imgur.com/Z2lWU8K.jpg');
         background-size: cover;
-        &::after {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: -1;
-            background: url('http://alanpride.com/admin/images/BG_Radial_gradient.png');
-        }
+    }
+    &__sub {
+        position: absolute;
+        z-index: 3;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        background-size: cover;
+        background-position: center center;
+        background: url('http://alanpride.com/admin/images/BG_Radial_gradient.png');
     }
 }
 .clearfix {
