--- a/app/scss/assets/base-assets/time.scss
+++ b/app/scss/assets/base-assets/time.scss
@@ -4,6 +4,7 @@
   right: 8em;
   text-align: right;
   font-size: 16px;
+  z-index: 10;
   @media screen and (min-width: 1920px) {
     font-size: 20px;
   }
